# multi-layer-perceptron

./: .gitignore  README.md  pyproject.toml
mlp/: activations.py  losses.py  mlp.py
